--- a/ucb_custom_menus.links.menu.yml
+++ b/ucb_custom_menus.links.menu.yml
@@ -1,8 +1,8 @@
 # --- Top-level menus ---
 ucb_custom_menus.add_content:
-  title: 'Add content 2'
+  title: 'Add content'
   description: ''
-  route_name: ucb_custom_menus.add_content
+  route_name: node.add_page
   parent: system.admin_content
   weight: 0
 
