--- a/ucb_custom_menus.routing.yml
+++ b/ucb_custom_menus.routing.yml
@@ -29,6 +29,16 @@ ucb_custom_menus.content_groups.news_and_articles:
   options:
     _admin_route: true
 
+ucb_custom_menus.content_groups.forms:
+  path: '/node/add/group/forms'
+  defaults:
+    _title: 'Add content: Forms'
+    _controller: 'Drupal\ucb_custom_menus\Controller\OverviewController::singleMenuOverview'
+  requirements:
+    _entity_create_any_access: 'node'
+  options:
+    _admin_route: true
+
 ucb_custom_menus.content_groups.people:
   path: '/node/add/group/people'
   defaults:
