--- a/ucb_admin_menus.info.yml
+++ b/ucb_admin_menus.info.yml
@@ -1,10 +1,11 @@
 name: CU Boulder Admin Menus
 description: 'Provides custom admin menus for CU Boulder sites.'
 type: module
-core_version_requirement: '^8.9 || ^9'
+core_version_requirement: '^9.5 || 10'
 dependencies:
   - admin_toolbar_tools
+  - help # this module has routes that override those in help
   - node
   - system
-version: '1.0'
+version: '1.1'
 package: CU Boulder
