--- a/ucb_admin_menus.routing.yml
+++ b/ucb_admin_menus.routing.yml
@@ -52,3 +52,19 @@ ucb_admin_menus.content_groups.people:
     _entity_create_any_access: 'node'
   options:
     _admin_route: true
+
+help.main:
+  path: /admin/help
+  defaults:
+    _controller: 'Drupal\ucb_admin_menus\Controller\HelpController::helpRedirect'
+    _title: 'Help'
+  requirements:
+    _permission: access administration pages
+
+help.page:
+  path: '/admin/help/{name}'
+  defaults:
+    _controller: 'Drupal\ucb_admin_menus\Controller\HelpController::helpRedirect'
+    _title: 'Help'
+  requirements:
+    _permission: access administration pages
