CuBoulder/ucb_admin_menus#7 fixes malformed `core_version_requirement`

--- a/ucb_admin_menus.info.yml
+++ b/ucb_admin_menus.info.yml
@@ -1,7 +1,7 @@
 name: CU Boulder Admin Menus
 description: 'Provides custom admin menus for CU Boulder sites.'
 type: module
-core_version_requirement: '^9.5 || 10'
+core_version_requirement: '^9.5 || ^10'
 dependencies:
   - admin_toolbar_tools
   - help # this module has routes that override those in help
