CuBoulder/tiamat-theme#282 adds custom styles for the secondary admin toolbar

--- a/ucb_admin_menus.libraries.yml
+++ b/ucb_admin_menus.libraries.yml
@@ -7,3 +7,9 @@ admin_helpscout_beacon:
       css/admin-helpscout-beacon.css: {}
   dependencies:
     - core/drupalSettings
+
+admin_toolbar_enhancer:
+  version: 1.0
+  css:
+    theme:
+      css/admin-toolbar-enhancer.css: {}
