--- a/ucb_admin_menus.links.menu.yml
+++ b/ucb_admin_menus.links.menu.yml
@@ -52,7 +52,15 @@ ucb_admin_menus.node.add.ucb_article_list:
 ucb_admin_menus.node.add.newsletter:
   class: 'Drupal\ucb_admin_menus\Plugin\Menu\NodeTypeMenuLink'
   parent: ucb_admin_menus.content_groups.news_and_articles
-  weight: 1
+  weight: 2
+ucb_admin_menus.node.add.ucb_issue:
+  class: 'Drupal\ucb_admin_menus\Plugin\Menu\NodeTypeMenuLink'
+  parent: ucb_admin_menus.content_groups.news_and_articles
+  weight: 3
+ucb_admin_menus.node.add.ucb_issue_archive:
+  class: 'Drupal\ucb_admin_menus\Plugin\Menu\NodeTypeMenuLink'
+  parent: ucb_admin_menus.content_groups.news_and_articles
+  weight: 4
 
 # --- Forms ---
 ucb_admin_menus.node.add.form_page:
