CuBoulder/ucb_admin_menus#29 Adds LogoutController and RouteSubscriber classes.

--- a/ucb_admin_menus.services.yml
+++ b/ucb_admin_menus.services.yml
@@ -3,13 +3,15 @@ services:
     class: 'Drupal\ucb_admin_menus\NodeTypeBreadcrumbBuilder'
     arguments: ['@plugin.manager.menu.link']
     tags:
-      -
-        name: breadcrumb_builder
+      - name: breadcrumb_builder
         priority: 1010
+  ucb_admin_menus.route_subscriber:
+    class: Drupal\ucb_admin_menus\Routing\RouteSubscriber
+    tags:
+      - name: event_subscriber
   http_middleware.ucb_admin_menus_redirect_403:
     class: 'Drupal\ucb_admin_menus\Middleware\Redirect403'
     arguments: ['@current_user']
     tags:
-      -
-        name: http_middleware
+      - name: http_middleware
         priority: 30
