--- a/ucb_admin_menus.info.yml
+++ b/ucb_admin_menus.info.yml
@@ -4,7 +4,7 @@ type: module
 core_version_requirement: '^9.5 || ^10'
 dependencies:
   - admin_toolbar_tools
-  - help # this module has routes that override those in help
   - node
-version: '1.2.2'
+  - user
+version: '1.3.0'
 package: CU Boulder
